--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/CandraIhsan_CV_English.pdf')"
+            onclick="window.open('./assets/Candra Ihsan_CV_English.pdf')"
           >
             Download CV
           </button>
