--- a/index.html
+++ b/index.html
@@ -291,7 +291,8 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Showroom CP</h2>
+            <h2 class="experience-sub-title project-title">Kens Car</h2>
+            <p class="project-category">Company Profile</p>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -315,7 +316,8 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">LP Humint Ebook</h2>
+            <h2 class="experience-sub-title project-title">E-Books Humint</h2>
+            <p class="project-category">Landing Page</p>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -331,6 +333,60 @@
               </button>
             </div>
           </div>
+
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./assets/PortoDocs/31.png"
+                alt="Project 2"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">Novacaine 13</h2>
+            <p class="project-category">Company Profile with Order System</p>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://api.whatsapp.com/send?phone=6285860853391'"
+              >
+              Contact Me
+              </button>
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://novacaine-13.vercel.app/'"
+              >
+                Live Demo
+              </button>
+            </div>
+          </div>
+
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./assets/PortoDocs/2.png"
+                alt="Project 2"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">Sejudol</h2>
+            <p class="project-category">Website Sentiment Analysis</p>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://api.whatsapp.com/send?phone=6285860853391'"
+              >
+              Contact Me
+              </button>
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="window.open('./assets/Sejudol_ENG.pdf')"
+              >
+                Details
+              </button>
+            </div>
+          </div>
+
+
           <div class="details-container color-container">
             <div class="article-container">
               <img
@@ -339,7 +395,8 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Movie Database</h2>
+            <h2 class="experience-sub-title project-title">Kens Box</h2>
+            <p class="project-category">Movie Website</p>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -363,7 +420,8 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Tour Booking</h2>
+            <h2 class="experience-sub-title project-title">Javaland</h2>
+            <p class="project-category">Tour Booking Website</p>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -387,7 +445,8 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Blogging MERN</h2>
+            <h2 class="experience-sub-title project-title">IntelliSense</h2>
+            <p class="project-category">Blogging Website with MERN</p>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -412,7 +471,8 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">CP Pottery Export</h2>
+            <h2 class="experience-sub-title project-title">Indo Pottery</h2>
+            <p class="project-category">Company Profile</p>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -438,6 +498,7 @@
               />
             </div>
             <h2 class="experience-sub-title project-title">Rank Japan Movie</h2>
+            <p class="project-category">Content Design</p>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -462,6 +523,7 @@
               />
             </div>
             <h2 class="experience-sub-title project-title">Women's Word</h2>
+            <p class="project-category">Content Design</p>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -486,6 +548,7 @@
               />
             </div>
             <h2 class="experience-sub-title project-title">UnderWatched Horror</h2>
+            <p class="project-category">Content Design</p>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -510,6 +573,7 @@
               />
             </div>
             <h2 class="experience-sub-title project-title">Analyst Toolbox</h2>
+            <p class="project-category">Content Design</p>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -534,6 +598,7 @@
               />
             </div>
             <h2 class="experience-sub-title project-title">Five Bear Web Shell</h2>
+            <p class="project-category">Content Design + Article Paper</p>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -559,6 +624,7 @@
               />
             </div>
             <h2 class="experience-sub-title project-title">Cartel & Mafia Mutualism</h2>
+            <p class="project-category">Content Design + Article Paper</p>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -583,6 +649,7 @@
               />
             </div>
             <h2 class="experience-sub-title project-title">Deadly Rate Fact Data</h2>
+            <p class="project-category">Content Design + Article Paper</p>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -607,6 +674,7 @@
               />
             </div>
             <h2 class="experience-sub-title project-title">EKO Cobra Kolase</h2>
+            <p class="project-category">Content Design</p>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -631,6 +699,7 @@
               />
             </div>
             <h2 class="experience-sub-title project-title">Russia Gazprom</h2>
+            <p class="project-category">Content Design + Article Paper</p>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -655,6 +724,7 @@
               />
             </div>
             <h2 class="experience-sub-title project-title">Houthi Power Areas</h2>
+            <p class="project-category">Content Design + Article Paper</p>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -679,6 +749,7 @@
               />
             </div>
             <h2 class="experience-sub-title project-title">HTS Economy</h2>
+            <p class="project-category">Content Design + Article Paper</p>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -703,6 +774,7 @@
               />
             </div>
             <h2 class="experience-sub-title project-title">Cyber Threat Analyst</h2>
+            <p class="project-category">Content Design + Article Paper</p>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -727,6 +799,7 @@
               />
             </div>
             <h2 class="experience-sub-title project-title">Communist Party Structure</h2>
+            <p class="project-category">Content Design + Article Paper</p>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -752,6 +825,7 @@
               />
             </div>
             <h2 class="experience-sub-title project-title">Hawala Banking Mechanism</h2>
+            <p class="project-category">Content Design + Article Paper</p>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -777,6 +851,7 @@
               />
             </div>
             <h2 class="experience-sub-title project-title">Highest Tiktok Engagement</h2>
+            <p class="project-category">Insight Statistics</p>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -802,6 +877,7 @@
               />
             </div>
             <h2 class="experience-sub-title project-title">Highest Instagram Engagement</h2>
+            <p class="project-category">Insight Statistics</p>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -817,7 +893,6 @@
               </button>
             </div>
           </div>
-          
           
         </div>
       </div>
