--- a/index.html
+++ b/index.html
@@ -466,6 +466,32 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
+                src="./assets/PortoDocs/36.png"
+                alt="Project 2"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">UI & UX</h2>
+            <p class="project-category">Figma Design</p>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://api.whatsapp.com/send?phone=6285860853391'"
+              >
+              Contact Me
+              </button>
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="window.open('./assets/UI&UX.pdf')"
+              >
+                Details
+              </button>
+            </div>
+          </div>
+
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
                 src="./assets/PortoDocs/19.png"
                 alt="Project 3"
                 class="project-img"
@@ -485,6 +511,32 @@
                 onclick="location.href='https://indopottery.wordpress.com/'"
               >
                 Live Demo
+              </button>
+            </div>
+          </div>
+
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./assets/PortoDocs/35.png"
+                alt="Project 3"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">Zaporizhia News</h2>
+            <p class="project-category">Analysis & Content Design</p>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://api.whatsapp.com/send?phone=6285860853391'"
+              >
+              Contact Me
+              </button>
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://drive.google.com/drive/folders/1DaLDk40vi4PomwyQHxr9ncEKmuwJZ66Y?usp=sharing'"
+              >
+                Details
               </button>
             </div>
           </div>
