--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://novacaine-13.vercel.app/'"
+                onclick="location.href='https://novacaine13.vercel.app/'"
               >
                 Live Demo
               </button>
