--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://javaland.vercel.app/home'"
+                onclick="location.href='https://javaland-lime.vercel.app/home'"
               >
                 Live Demo
               </button>
